testsuite/poke.pkl/eq-f32-diag-2.pk
/* { dg-do compile } */

var res
  = 1 .== (5 as int<31>); /* { dg-error "invalid operand .*" } */
